# jikan_moe

./: .gitignore  Cargo.toml
src/: anime.rs  manga.rs  producer.rs  schedule.rs  seasons.rs
src/common/structs/: manga.rs
